--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "zendframework/zend-view": "*"
     },
     "require-dev": {
-        "fabpot/php-cs-fixer": "*@dev"
+        "fabpot/php-cs-fixer": "dev-master"
     },
     "autoload": {
         "psr-0": {
