--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zend-view": "*"
+        "zendframework/zend-view": "2.2.*"
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "dev-master"
