--- a/config/websafe.view.helper.git.repository.global.php.dist
+++ b/config/websafe.view.helper.git.repository.global.php.dist
@@ -12,6 +12,8 @@ return array(
         'invokables' => array(
             'gitRepoCurrentBranch'
                 => 'Websafe\View\Helper\Git\Repository\CurrentBranch',
+            'gitRepoDescription'
+                => 'Websafe\View\Helper\Git\Repository\Description',
         ),
     ),
 );
